IMCMS-356 - Fix z-index for all editors: - Fixed z-indexes.

--- a/src/main/webapp/css/admin/imcms-admin_panel.css
+++ b/src/main/webapp/css/admin/imcms-admin_panel.css
@@ -7,7 +7,7 @@
     -moz-transition: all .3s;
     -o-transition: all .3s;
     transition: all .3s;
-    z-index: 1500;
+    z-index: 1;
 }
 
 .imcms-admin-panel {
@@ -26,7 +26,7 @@
     -o-transition: all .3s;
     transition: all .3s;
     position: absolute;
-    z-index: 1502;
+    z-index: 2;
     border-bottom: 0 solid #ccc;
 }
 
