--- a/src/main/webapp/css/imcms-text_editor.css
+++ b/src/main/webapp/css/imcms-text_editor.css
@@ -205,7 +205,7 @@
     left: 0 !important;
     width: 100% !important;
     height: calc(100% - 33px) !important;
-    z-index: 65534 !important;
+    z-index: 9400 !important;
     padding: 2% !important;
     overflow: auto !important;
     outline: none;
@@ -217,7 +217,7 @@
     top: 0 !important;
     left: 0 !important;
     width: 100% !important;
-    z-index: 65535 !important;
+    z-index: 9500 !important;
 }
 
 .mce-fullscreen-toolbar .mce-tinymce.mce-tinymce-inline.mce-container.mce-panel {
